/**
 * Copyright (c) 2015 - The CM Authors <legal@clickmatcher.com>
 *   All Rights Reserved.
 *
 * This file is CONFIDENTIAL -- Distribution or duplication of this material or
 * the information contained herein is strictly forbidden unless prior written
 * permission is obtained.
 */
package zbase;

message AnalyticsTableScanMapperParams {
  required string table_name = 1;
  required string partition_key = 2;
  optional string scanlet_params = 3;
}

message AnalyticsTableScanReducerParams {
  required string customer = 1;
  required uint64 from_unixmicros = 2;
  required uint64 until_unixmicros = 3;
  optional string scanlet_params = 4;
  optional string query = 5;
}

